--- a/client/src/components/navbar/NavBar.css
+++ b/client/src/components/navbar/NavBar.css
@@ -5,12 +5,12 @@
   background: transparent;
   cursor: pointer;
   outline: none;
-  /* font-size: 18px; */
-  margin: 0.8em;
+  font-size: 18px;
+  margin: 1rem;
 }
 
-.btn-nav::after {
-  content: '';
+/* .btn-nav::after {
+  content: "";
   display: block;
   position: absolute;
   height: 2px;
@@ -26,71 +26,68 @@
 
 .btn-nav:hover:after {
   width: 70%;
-}
+} */
+
 #main-nav {
   background-color: #ffffff;
-  text-align: center;
 }
 
 #main-nav .container {
-  padding: 0.8rem 1.2rem;
   margin: auto;
   display: flex;
-  flex-direction: row;
-  text-align: center;
-  align-items: center;
   justify-content: space-around;
   box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.2);
-  z-index: 1;
+  /* position: fixed;
+  top: 0;
+  width: 100%;
+  margin: 0 auto; */
+  padding: 1.2rem;
 }
 
-#navbar ul {
-  list-style: none;
-}
-
-#navbar ul li {
-  color: #333;
-  display: inline-block;
-  padding: 1rem;
-  position: relative;
-}
-
-#navbar ul li ul {
-  display: none;
-}
-
-#main-nav #logo a {
+#main-nav #logo .home {
   font-size: 2rem;
   font-family: 'Dancing Script', cursive;
 }
 
-#navbar ul li a {
+#navbar ul {
+  list-style: none;
+  display: flex;
+}
+
+#navbar ul li ul {
+  display: none;
+  position: absolute;
+}
+#navbar ul li:hover ul {
+  display: block;
+}
+
+#navbar ul li:hover ul li {
+  display: block;
+  padding: 1rem;
+  background-color: #ffffff;
+  box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.2);
+  position: relative;
+  top: 30px;
+  right: 20px;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+}
+
+#navbar ul li ul li .dropdown_account {
   color: #333;
   text-decoration: none;
   font-size: 1.2rem;
 }
 
-#navbar ul li:hover ul {
-  display: block;
-  position: absolute;
-  left: 10px;
-  right: 20px;
-  width: 200px;
-  margin-top: 1.2rem;
+#navbar ul li ul li:hover {
+  background-color: #f4f4f4f4;
 }
 
-#navbar ul li:hover ul li {
-  display: block;
-  background: #e7e7e7;
-}
-
-#navbar ul li:hover ul li a {
-  color: #333;
-}
-
-#navbar ul li:hover ul li:hover {
-  color: inherit;
-  background: #e0e0e0;
+.sticky {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 1;
 }
 
 .button_connect {
