--- a/client/src/pages/MyCollection/MyCollection.css
+++ b/client/src/pages/MyCollection/MyCollection.css
@@ -4,6 +4,7 @@
   border: 1px solid #333;
   padding: 12px;
   border-radius: 10px;
+  cursor: pointer;
 }
 
 .my-collection {
@@ -15,38 +16,125 @@
 }
 
 .my-collection .container {
-  margin: 120px auto;
+  margin: 100px 0 0 0;
 }
 
 .new-collection {
   padding-top: 1.5rem;
-  padding-bottom: 3rem;
+  padding-bottom: 1.5rem;
+  padding-left: 2.5rem;
+}
+
+/* Grid for created collections */
+
+.container-collection {
+  margin-top: 12px;
 }
 
 .collection {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  /* column-gap: 30px; */
-  row-gap: 40px;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  columns: 5 300px;
+  column-gap: 1.5rem;
+  width: 100%;
+  margin: 0 auto;
 }
 
-.created-collection {
-  display: block;
-  /* margin: 1rem 2rem; */
-  margin: 0;
+.collection .wrapped {
+  width: 150px;
+  padding: 1rem;
+  margin: 0 1.5rem 1.5rem 0;
+  display: inline-block;
+  width: 100%;
+  cursor: pointer;
+  border-radius: 2px;
+  transition: all 0.3s ease-in-out;
+}
+.collection .wrapped:hover {
+  transform: scale(0.9);
+  box-shadow: 2px 5px 5px 5px rgba(0, 0, 0, 0.5);
+}
+
+.collection .wrapped img {
+  max-height: 100%;
+  max-width: 100%;
+}
+
+.collection #title {
+  margin: 5px 0;
   padding: 0;
   text-align: center;
-  /* background: #ffffff; */
-  /* border: 1px solid rgba(0, 0.2, 0, 0.2); */
-  border-radius: 5px;
+  text-transform: capitalize;
+  font-size: 12px;
 }
 
-.created-collection .image-cover img {
-  height: 300px;
-  border-radius: 10px;
-  /* padding-top: 1.2rem; */
+/* The Modal (background) */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  padding-top: 60px; /* Location of the box */
+  left: 0;
+  top: 0;
+  font-size: 20px;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0, 0, 0); /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
 }
 
-.created-collection .content-cover {
-  /* padding: 1.2rem 0; */
+input,
+label {
+  display: block;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  width: 100%;
+  height: 100%;
+}
+
+input,
+textarea {
+  padding: 15px;
+  width: 100%;
+  cursor: pointer;
+}
+
+input[type='file'] {
+  padding-left: 0;
+}
+
+.modal button {
+  margin-top: 15px;
+  margin-left: 42%;
+}
+
+/* Modal Content */
+.modal-content {
+  background-color: #fefefe;
+  margin: auto;
+  padding: 30px;
+  border: 1px solid #888;
+  width: 30%;
+  font-size: 16px;
+}
+
+.modal-content h1 {
+  font-size: 20px;
+  text-align: center;
+}
+
+/* The Close Button */
+.close {
+  color: #aaaaaa;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
 }
