--- a/client/src/components/create_modal/CreateCollectionModal.css
+++ b/client/src/components/create_modal/CreateCollectionModal.css
@@ -8,6 +8,7 @@ button {
   border: 1px solid #333;
   padding: 12px;
   border-radius: 10px;
+  cursor: pointer;
 }
 
 .my-collection {
@@ -112,7 +113,15 @@ button {
   position: relative;
 }
 
-label {
+/* label {
+  display: block;
+  padding: 10px;
+  width: 100%;
+  font-weight: bold;
+  margin-bottom: -5px;
+} */
+
+.collectionmodal_label {
   display: block;
   padding: 10px;
   width: 100%;
@@ -120,8 +129,18 @@ label {
   margin-bottom: -5px;
 }
 
-input,
-textarea {
+/* input, */
+/* textarea {
+  width: 100%;
+  height: 100%;
+  padding: 10px;
+  margin-top: 5px;
+  font-size: 16px;
+  font-weight: normal;
+  max-height: 100px;
+} */
+
+.input_name {
   width: 100%;
   height: 100%;
   padding: 10px;
