--- a/client/src/pages/ListItem/ListItem.css
+++ b/client/src/pages/ListItem/ListItem.css
@@ -108,16 +108,26 @@ button {
   position: relative;
 }
 
-label {
+/* label {
   display: block;
   padding: 10px;
   width: 100%;
   font-weight: bold;
   margin-bottom: -5px;
-}
+} */
 
-input,
+/* input,
 textarea {
+  width: 100%;
+  height: 100%;
+  padding: 10px;
+  margin-top: 5px;
+  font-size: 16px;
+  font-weight: normal;
+  max-height: 100px;
+} */
+
+.input_search {
   width: 100%;
   height: 100%;
   padding: 10px;
