--- a/client/src/pages/MyCollection/MyCollection.css
+++ b/client/src/pages/MyCollection/MyCollection.css
@@ -2,7 +2,7 @@ button {
   font-size: 16px;
 }
 
-.btn-dark {
+.mycollection_btn-dark {
   background: #333;
   color: #f4f4f4f4;
   border: 1px solid #333;
@@ -11,69 +11,69 @@ button {
   cursor: pointer;
 }
 
-.my-collection {
+.mycollection_my-collection {
   width: 80vw;
 }
-.my-collection h1 {
+.mycollection_my-collection h1 {
   padding-top: 12px;
 }
 
-.my-collection p {
+.mycollection_my-collection p {
   padding-top: 12px;
   padding-bottom: 12px;
 }
 
-.my-collection .container-title {
+.mycollection_my-collection .mycollection_container-title {
   text-align: center;
 }
 
-.my-collection .container {
+.mycollection_my-collection .mycollection_container {
   margin: 100px 0 0 0;
 }
 
-.new-collection {
-  padding-top: 1.5rem;
-  padding-bottom: 1.5rem;
-  padding-left: 2.5rem;
+.mycollection_new-collection {
+  padding-top: 1mycollection_5rem;
+  padding-bottom: 1mycollection_5rem;
+  padding-left: 2mycollection_5rem;
 }
 
 /* Grid for created collections */
 
-.container-collection {
+.mycollection_container-collection {
   margin-top: 12px;
 }
 
-.collection {
+.mycollection_collection {
   justify-content: center;
   align-items: center;
   flex-direction: column;
   columns: 5 300px;
-  column-gap: 1.5rem;
+  column-gap: 1mycollection_5rem;
   width: 100%;
   margin: 0 auto;
 }
 
-.collection .wrapped {
+.mycollection_collection .mycollection_wrapped {
   width: 150px;
   padding: 1rem;
-  margin: 0 1.5rem 1.5rem 0;
+  margin: 0 1mycollection_5rem 1mycollection_5rem 0;
   display: inline-block;
   width: 100%;
   cursor: pointer;
   border-radius: 2px;
-  transition: all 0.3s ease-in-out;
+  transition: all 0mycollection_3s ease-in-out;
 }
-.collection .wrapped:hover {
-  transform: scale(0.9);
-  box-shadow: 2px 5px 5px 5px rgba(0, 0, 0, 0.5);
+.mycollection_collection .mycollection_wrapped:hover {
+  transform: scale(0mycollection_9);
+  box-shadow: 2px 5px 5px 5px rgba(0, 0, 0, 0mycollection_5);
 }
 
-.collection .wrapped img {
+.mycollection_collection .mycollection_wrapped img {
   max-height: 100%;
   max-width: 100%;
 }
 
-.collection #title {
+.mycollection_collection #title {
   margin: 5px 0;
   padding: 0;
   text-align: center;
@@ -82,7 +82,7 @@ button {
 }
 
 /* The Modal (background) */
-.modal {
+.mycollection_modal {
   display: none; /* Hidden by default */
   position: fixed; /* Stay in place */
   z-index: 1; /* Sit on top */
@@ -94,11 +94,11 @@ button {
   height: 100%; /* Full height */
   overflow: auto; /* Enable scroll if needed */
   background-color: rgb(0, 0, 0); /* Fallback color */
-  background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+  background-color: rgba(0, 0, 0, 0mycollection_4); /* Black w/ opacity */
 }
 
 /* Modal Content */
-.modal-content {
+.mycollection_modal-content {
   background-color: #fefefe;
   padding: 20px 40px;
   border: 1px solid #888;
@@ -109,15 +109,15 @@ button {
   position: relative;
 }
 
-label {
+/* label {
   display: block;
   padding: 10px;
   width: 100%;
   font-weight: bold;
   margin-bottom: -5px;
-}
+} */
 
-input,
+/* input,
 textarea {
   width: 100%;
   height: 100%;
@@ -126,22 +126,22 @@ textarea {
   font-size: 16px;
   font-weight: normal;
   max-height: 100px;
-}
+} */
 
-.modal-content h1 {
+.mycollection_modal-content h1 {
   font-size: 20px;
   text-transform: uppercase;
   text-align: center;
   margin-top: 10px;
 }
 
-.modal-content button {
+.mycollection_modal-content button {
   width: 100%;
   margin-top: 15px;
   font-size: 20px;
 }
 /* The Close Button */
-.close {
+.mycollection_close {
   position: absolute;
   top: 10px;
   right: 20px;
@@ -150,34 +150,34 @@ textarea {
   font-weight: bold;
 }
 
-.close:hover,
-.close:focus {
+.mycollection_close:hover,
+.mycollection_close:focus {
   color: #000;
   text-decoration: none;
   cursor: pointer;
 }
 
 /* Image Upload */
-.input-file-container {
+.mycollection_input-file-container {
   position: relative;
   width: 225px;
 }
 
-.input-file-container input[type='file'] {
+.mycollection_input-file-container input[type='file'] {
   margin-top: 20px;
 }
 
-.js .input-file-trigger {
+.mycollection_js .mycollection_input-file-trigger {
   display: block;
   padding: 30px 45px;
   border: 1px dotted #000;
   /* margin-top: 20px; */
   color: #333;
   font-size: 1em;
-  transition: all 0.4s;
+  transition: all 0mycollection_4s;
   cursor: pointer;
 }
-.js .input-file {
+.mycollection_js .mycollection_input-file {
   position: absolute;
   top: 0;
   left: 0;
@@ -186,28 +186,28 @@ textarea {
   padding: 40px 0;
   cursor: pointer;
 }
-/* .js .input-file:hover + .input-file-trigger,
-.js .input-file:focus + .input-file-trigger,
-.js .input-file-trigger:hover,
-.js .input-file-trigger:focus {
+/* .mycollection_js .mycollection_input-file:hover + .mycollection_input-file-trigger,
+.mycollection_js .mycollection_input-file:focus + .mycollection_input-file-trigger,
+.mycollection_js .mycollection_input-file-trigger:hover,
+.mycollection_js .mycollection_input-file-trigger:focus {
   border: 1px dotted #000;
   background: #39d2b4;
   color: #333;
 } */
 
-.file-return {
+.mycollection_file-return {
   margin: 0;
 }
-.file-return:not(:empty) {
+.mycollection_file-return:not(:empty) {
   margin: 1em 0;
   margin-left: -60px;
 }
-.js .file-return {
+.mycollection_js .mycollection_file-return {
   font-style: italic;
-  font-size: 0.9em;
+  font-size: 0mycollection_9em;
   font-weight: bold;
 }
-.js .file-return:not(:empty):before {
+.mycollection_js .mycollection_file-return:not(:empty):before {
   content: 'File đã chọn: ';
   padding: auto;
   font-style: normal;
@@ -215,33 +215,33 @@ textarea {
 }
 
 /* Search Button */
-.container-equip {
+.mycollection_container-equip {
   display: flex;
   flex-wrap: nowrap;
   padding-left: -10px;
 }
 
-.search-bar {
+.mycollection_search-bar {
   width: 80%;
   vertical-align: middle;
   white-space: nowrap;
   position: relative;
 }
 
-.search-bar input[type='search'] {
+.mycollection_search-bar input[type='search'] {
   padding-left: 45px;
   height: 42px;
-  border: 0.5px solid;
+  border: 0mycollection_5px solid;
   border-radius: 10px;
   background-color: #f4f4f4f4;
   font-size: 16px;
 }
 
-.search-icon {
+.mycollection_search-icon {
   color: #65737e;
 }
 
-.search-bar .search-icon {
+.mycollection_search-bar .mycollection_search-icon {
   position: absolute;
   top: px;
   margin-left: 17px;
@@ -249,15 +249,15 @@ textarea {
   z-index: 1;
 }
 
-.search-bar input:focus .search-icon {
-  transform: scale(1.5);
+.mycollection_search-bar input:focus .mycollection_search-icon {
+  transform: scale(1mycollection_5);
 }
 
-.search-bar input:focus {
+.mycollection_search-bar input:focus {
   border: none;
-  box-shadow: 2px 5px 5px 5px rgba(0, 0, 0, 0.2);
+  box-shadow: 2px 5px 5px 5px rgba(0, 0, 0, 0mycollection_2);
 }
 
-.search-bar .btn-dark {
+.mycollection_search-bar .mycollection_btn-dark {
   padding: 20px;
 }
