--- a/client/src/pages/DetailItem/DetailItem.css
+++ b/client/src/pages/DetailItem/DetailItem.css
@@ -14,6 +14,10 @@
   box-shadow: 1px 2px 5px 3px rgba(0, 0, 0, 0.2);
 }
 
+.itemdetail_image {
+  width: 100%;
+}
+
 .itemdetail_container-item .itemdetail_container-image,
 .itemdetail_contract {
   text-align: center;
